// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BlogPostHeroBanner renders hero banner with title and subtitle 1`] = `
<section
  className="jsx-3528769338"
>
  <h1
    className="jsx-641291359"
  >
    Test title
  </h1>
  <h2
    className="jsx-1054465095"
  >
    Test subtitle
  </h2>
</section>
`;

exports[`BlogPostHeroBanner renders hero banner with title only 1`] = `
<section
  className="jsx-3528769338"
>
  <h1
    className="jsx-641291359"
  >
    Test title
  </h1>
  
</section>
`;
